ingress-nginx/ingress-nginx-diy/elastic-logging-kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elastic-logging-kibana-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: elastic-logging-kibana.k8s-nginx.jcloud.com
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
