ingress-nginx/ingress-nginx-diy/elasticsearch-logging-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-logging-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: elasticsearch-logging.k8s-nginx.jcloud.com
    http:
      paths:
      - backend:
          serviceName: elasticsearch-logging
          servicePort: 9200
